# stock-analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  conftest.py  fix_logger.py  fix_logger2.py  investkit_utils  pyproject.toml  render.yaml  replace_print.py
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BacktestPanel.tsx  Header.tsx  MarketTimingPanel.tsx  PortfolioPanel.tsx  ScanPanel.tsx  SectorPanel.tsx  StatsBar.tsx  Tabs.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
investkit_utils/: .gitignore  README.md  README.zh-CN.md  pyproject.toml
investkit_utils/src/investkit_utils/: __init__.py
investkit_utils/src/investkit_utils/api_docs/: __init__.py  discovery.py  openapi.py  server.py  services.py
investkit_utils/src/investkit_utils/api_docs/tests/: test_api_docs.py
investkit_utils/src/investkit_utils/cache/: __init__.py  base.py  decorators.py  manager.py  memory.py  redis_cache.py
investkit_utils/src/investkit_utils/cache/tests/: test_cache.py  test_decorators.py  test_memory.py  test_redis_cache.py
investkit_utils/src/investkit_utils/config/: __init__.py  config.asset-lens.yaml  config.base.yaml  config.lobster.yaml  config.stock-analyzer.yaml  config.template.yaml  loader.py  models.py
investkit_utils/src/investkit_utils/config/tests/: test_config.py  test_loader.py
investkit_utils/src/investkit_utils/db/: __init__.py  connection.py  constants.py  models.py  paths.py
investkit_utils/src/investkit_utils/db/tests/: test_db.py
investkit_utils/src/investkit_utils/exceptions/: __init__.py  base.py  handlers.py
investkit_utils/src/investkit_utils/exceptions/tests/: test_exceptions.py  test_handlers.py
investkit_utils/src/investkit_utils/log_utils/: __init__.py  config.py  context.py  formatters.py  logger.py  manager.py
investkit_utils/src/investkit_utils/log_utils/tests/: test_formatters.py  test_log_utils.py
investkit_utils/src/investkit_utils/testing/: __init__.py  assertions.py  data_generators.py  fixtures.py  mocks.py
investkit_utils/src/investkit_utils/testing/tests/: test_testing.py
investkit_utils/src/investkit_utils/types/: __init__.py  enums.py  models.py
investkit_utils/src/investkit_utils/types/tests/: test_models.py  test_types.py
investkit_utils/src/investkit_utils/utils/: __init__.py  data_utils.py  datetime_utils.py  file_utils.py  financial.py  numeric.py  retry.py  string_utils.py  validators.py
investkit_utils/src/investkit_utils/utils/tests/: test_data_utils.py  test_datetime_utils.py  test_file_utils.py  test_financial.py  test_numeric.py  test_retry.py  test_string_utils.py  test_utils.py  test_utils_extended.py  test_validators.py
scripts/: seed_demo.py
src/: __init__.py  analyze_stocks.py  config.py  constants.py  db.py  main.py
src/data/: __init__.py  fetcher.py  stock_info.py  sync.py  sync_env.py
src/etl/: __init__.py  pipeline.py
src/scanner/: __init__.py  accuracy.py  monitor.py  risk_alert.py  signals.py  visualization.py
src/scorer/: __init__.py  ranking.py
src/strategy/: __init__.py  advanced.py  backtest.py  benchmark.py  comparison.py  market_timing.py  optimization.py  portfolio.py  risk_control.py  sector_rotation.py  sector_validation.py  trade_report.py  visualization.py
src/utils/: __init__.py  cli_utils.py  export.py  font_config.py  interactive_cli.py  performance.py
src/web/: __init__.py  api.py  schemas.py
src/web/static/: index.html
src/web/static/assets/: index-C47MPK8o.css  index-D0Ydtw7B.js  index-DMU3Qx8p.css
tests/: __init__.py  test_accuracy.py  test_advanced_strategy.py  test_analyze_stocks.py  test_api.py  test_backtest.py  test_benchmark.py  test_cli_utils.py  test_comparison.py  test_constants.py  test_data_sync.py  test_db.py  test_etl.py  test_export.py  test_fetcher.py  test_main.py  test_main_extended.py  test_market_timing.py  test_monitor.py  test_optimization.py  test_performance.py  test_portfolio.py  test_ranking.py  test_risk_alert.py  test_risk_control.py  test_scanner.py  test_scanner_accuracy.py  test_scanner_signals.py  test_scorer.py  test_sector_rotation.py  test_signals.py  test_stock_info.py  test_strategy.py  test_sync.py  test_trade_report.py  test_visualization.py  test_web.py
