[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Stock Analyzer - 股票数据分析工具"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "investkit-utils",
    "matplotlib",
    "numpy",
    "pandas",
    "akshare",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
stock-analyzer = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "PERF", "RUF"]
ignore = ["S101", "RUF001", "RUF002", "RUF003", "PERF203", "PERF401", "RUF012", "SIM117", "E501", "E402", "N806", "N803", "E741", "B008", "SIM115"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "RUF012"]
"src/main.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__init__.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.uv.sources]
investkit-utils = { workspace = true }
