[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Stock Analyzer - 股票数据分析工具"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "investkit-utils",
    "matplotlib>=3.7.0,<4.0.0",
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "akshare>=1.10.0,<2.0.0",
    "rich>=13.0.0,<15.0.0",
    "questionary>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.50",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
stock-analyzer = "src.main:main"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__init__.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.uv.sources]
investkit-utils = { path = "investkit_utils" }
