[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investkit-utils"
version = "1.0.0"
description = "InvestKit 工具库 - 统一的配置、日志、工具、异常、类型定义和测试工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    {name = "InvestKit Team"}
]
keywords = [
    "investkit",
    "utils",
    "log_utils",
    "exceptions",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
]
redis = [
    "redis>=4.0.0",
]
db = [
    "sqlalchemy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["investkit_utils*"]
namespaces = false

[tool.ruff]
extend = "../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["investkit_utils"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
